load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_virtual_dir_lib",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_virtual_dir",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/filesystem/pool",
        "//pkg/filesystem/virtual",
        "//pkg/filesystem/virtual/configuration",
        "//pkg/proto/configuration/bb_virtual_dir",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "bb_virtual_dir",
    embed = [":bb_virtual_dir_lib"],
    visibility = ["//visibility:public"],
)
