load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/builder:go_default_library",
        "//pkg/cas:go_default_library",
        "//pkg/environment:go_default_library",
        "//pkg/filesystem:go_default_library",
        "//pkg/proto/configuration/bb_worker:go_default_library",
        "//pkg/proto/remoteworker:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/cas:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/clock:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/eviction:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/grpc:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_gorilla_mux//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
    ],
)

go_binary(
    name = "bb_worker",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_worker_container",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_worker_container_push",
    component = "bb-worker",
    image = ":bb_worker_container",
)
