load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_worker_lib",
    srcs = [
        "main.go",
        "main_nonunix.go",
        "main_unix.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore",
        "//pkg/builder",
        "//pkg/cas",
        "//pkg/cleaner",
        "//pkg/clock",
        "//pkg/filesystem",
        "//pkg/filesystem/fuse",
        "//pkg/proto/configuration/bb_worker",
        "//pkg/proto/remoteworker",
        "//pkg/proto/runner",
        "@com_github_buildbarn_bb_storage//pkg/atomic",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/eviction",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/grpc",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "bb_worker",
    embed = [":bb_worker_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "bb_worker_container",
    embed = [":bb_worker_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

container_push_official(
    name = "bb_worker_container_push",
    component = "bb-worker",
    image = ":bb_worker_container",
)
