load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official", "multiarch_go_image")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bb_worker_lib",
    srcs = [
        "main.go",
        "main_unix.go",
        "main_windows.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/cmd/bb_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/blobstore",
        "//pkg/builder",
        "//pkg/cas",
        "//pkg/cleaner",
        "//pkg/clock",
        "//pkg/filesystem/pool",
        "//pkg/filesystem/virtual",
        "//pkg/filesystem/virtual/configuration",
        "//pkg/proto/completedactionlogger",
        "//pkg/proto/configuration/bb_worker",
        "//pkg/proto/remoteworker",
        "//pkg/proto/runner",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/configuration",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/eviction",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/global",
        "@com_github_buildbarn_bb_storage//pkg/program",
        "@com_github_buildbarn_bb_storage//pkg/random",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@io_opentelemetry_go_otel//:otel",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sync//semaphore",
    ] + select({
        "@rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "bb_worker",
    embed = [":bb_worker_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

multiarch_go_image(
    name = "bb_worker_container",
    binary = ":bb_worker",
)

container_push_official(
    name = "bb_worker_container_push",
    component = "bb-worker",
    image = ":bb_worker_container",
)
